--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,10 +13,7 @@
         android:theme="@style/Theme.Mandu"
         tools:targetApi="31">
         <activity
-            android:name=".ui.profile.ProfileActivity"
-            android:exported="false"/>
-        <activity
-            android:name=".MainActivity"
+            android:name=".ui.auth.AuthActivity"
             android:exported="true"
             android:theme="@style/SplashTheme">
             <intent-filter>
@@ -24,6 +21,13 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".ui.profile.ProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="false">
         </activity>
     </application>
 
