Firebase Cloud Messaging Integration
This commit integrates Firebase Cloud Messaging (FCM) to enable push notifications.

Key changes:
- Added Firebase Messaging dependency.
- Implemented `MyFirebaseMessagingService` to handle incoming messages and display notifications.
- Added logic to request notification permission on Android 13+ in `MainActivity`.
- Included `POST_NOTIFICATIONS` permission in the manifest.
- Added a notification icon.
- Implemented functionality to save the FCM token for admin users to Firestore.

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -30,6 +30,7 @@ recyclerview = "1.4.0"
 roomRuntime = "2.7.1"
 activity = "1.10.1"
 swiperefreshlayout = "1.1.0"
+firebaseMessaging = "24.1.1"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activity" }
@@ -67,6 +68,7 @@ firebase-storage = { group = "com.google.firebase", name = "firebase-storage", v
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swiperefreshlayout" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
