--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ fragmentKtx = "1.8.8"
 glide = "4.16.0"
 googleAuthLibraryOauth2Http = "1.37.0"
 gson = "2.12.1"
+integrity = "1.4.0"
 kotlin = "2.0.21"
 coreKtx = "1.16.0"
 junit = "4.13.2"
@@ -49,6 +50,7 @@ firebase-functions-ktx = { module = "com.google.firebase:firebase-functions-ktx"
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
 google-auth-library-oauth2-http = { module = "com.google.auth:google-auth-library-oauth2-http", version.ref = "googleAuthLibraryOauth2Http" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+integrity = { module = "com.google.android.play:integrity", version.ref = "integrity" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
