--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,37 +1,32 @@
 [versions]
-agp = "8.10.1"
+agp = "8.13.0"
 coreSplashscreen = "1.0.1"
-firebaseBom = "33.15.0"
-fragmentKtx = "1.8.8"
-glide = "4.16.0"
-googleAuthLibraryOauth2Http = "1.37.0"
-gson = "2.12.1"
-integrity = "1.4.0"
-kotlin = "2.0.21"
-coreKtx = "1.16.0"
+firebaseBom = "34.4.0"
+fragmentKtx = "1.8.9"
+glide = "5.0.5"
+gson = "2.13.2"
+integrity = "1.5.0"
+kotlin = "2.2.20"
+coreKtx = "1.17.0"
 junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.6.1"
+junitVersion = "1.3.0"
+espressoCore = "3.7.0"
 appcompat = "1.7.1"
-kotlinxCoroutinesCore = "1.8.1"
-lifecycleLivedataKtx = "2.9.1"
-material = "1.12.0"
+kotlinxCoroutinesCore = "1.10.2"
+lifecycleLivedataKtx = "2.9.4"
+material = "1.13.0"
 constraintlayout = "2.2.1"
-navigationFragmentKtx = "2.6.0"
-navigationUiKtx = "2.6.0"
-googleGmsGoogleServices = "4.4.2"
-firebaseAuth = "23.2.1"
+navigationFragmentKtx = "2.9.5"
+navigationUiKtx = "2.9.5"
+googleGmsGoogleServices = "4.4.4"
 credentials = "1.5.0"
 credentialsPlayServicesAuth = "1.5.0"
 googleid = "1.1.1"
-firebaseFirestore = "25.1.4"
-firebaseStorage = "21.0.2"
-playServicesAuth = "21.3.0"
+playServicesAuth = "21.4.0"
 recyclerview = "1.4.0"
-roomRuntime = "2.7.1"
-activity = "1.10.1"
+roomRuntime = "2.8.2"
+activity = "1.11.0"
 swiperefreshlayout = "1.1.0"
-firebaseMessaging = "24.1.1"
 
 [libraries]
 androidx-activity-ktx = { module = "androidx.activity:activity-ktx", version.ref = "activity" }
@@ -46,9 +41,14 @@ androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRunt
 androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
-firebase-functions-ktx = { module = "com.google.firebase:firebase-functions-ktx" }
+
+firebase-auth = { group = "com.google.firebase", name = "firebase-auth" }
+firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore" }
+firebase-storage = { group = "com.google.firebase", name = "firebase-storage" }
+firebase-functions = { group = "com.google.firebase", name = "firebase-functions" }
+firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging" }
+
 glide = { module = "com.github.bumptech.glide:glide", version.ref = "glide" }
-google-auth-library-oauth2-http = { module = "com.google.auth:google-auth-library-oauth2-http", version.ref = "googleAuthLibraryOauth2Http" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 integrity = { module = "com.google.android.play:integrity", version.ref = "integrity" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -62,19 +62,13 @@ material = { group = "com.google.android.material", name = "material", version.r
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
 androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navigation-fragment-ktx", version.ref = "navigationFragmentKtx" }
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
-firebase-auth = { group = "com.google.firebase", name = "firebase-auth", version.ref = "firebaseAuth" }
 androidx-credentials = { group = "androidx.credentials", name = "credentials", version.ref = "credentials" }
 androidx-credentials-play-services-auth = { group = "androidx.credentials", name = "credentials-play-services-auth", version.ref = "credentialsPlayServicesAuth" }
 googleid = { group = "com.google.android.libraries.identity.googleid", name = "googleid", version.ref = "googleid" }
-firebase-firestore = { group = "com.google.firebase", name = "firebase-firestore", version.ref = "firebaseFirestore" }
-firebase-storage = { group = "com.google.firebase", name = "firebase-storage", version.ref = "firebaseStorage" }
-androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 play-services-auth = { module = "com.google.android.gms:play-services-auth", version.ref = "playServicesAuth" }
 androidx-swiperefreshlayout = { group = "androidx.swiperefreshlayout", name = "swiperefreshlayout", version.ref = "swiperefreshlayout" }
-firebase-messaging = { group = "com.google.firebase", name = "firebase-messaging", version.ref = "firebaseMessaging" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 google-gms-google-services = { id = "com.google.gms.google-services", version.ref = "googleGmsGoogleServices" }
-
